2005-06-13  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.5

	* gmime/gmime-parser.c (parser_step_headers): Don't check
	inptr[-1] unless inptr > start

2005-06-10  Joe Shaw  <joeshaw@novell.com>

	* mono/Stream.custom (CopyToStream): Check to see if
	byte_array.data is IntPtr.Zero and don't try to copy if it is.

2005-06-10  Joe Shaw  <joeshaw@novell.com>

	* mono/DataWrapper.custom: Added.  Adds a WriteToStream() overload
	which takes a System.IO.Stream.

	* mono/Header.custom: Ditto.

	* mono/Makefile.am: Add DataWrapper.custom and Header.custom to
	customs.

	* mono/Object.custom: Remove the GetData() method... it was rather
	flawed.  WriteToStream() is the right way to go about it now.  Add
	a WriteToStream() overload like DataWrapper and Header.

	* mono/Stream.custom: Add an internal CopyToStream() method which
	instantiates a GMime.StreamMem, calls WriteToStream() on it, and
	then copies the data from the GByteArray into a System.IO.Stream.
	Also add a WriteToStream() overload like the others.

2005-05-25  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metdata: Add a few extra rules since the
	parser/generator changed how certain types are represented.

	* mono/InternetAddress.custom: Remove this file, move the code to...

	* mono/InternetAddressList.cs: ... this file, making it a
	first-order object.  Since it implements IDisposable and people
	might want to explicitly dispose it.

	* mono/Message.custom (GetRecipients): Return an
	InternetAddressList rather than an ICollection, so people can
	dispose when finished.  Also have it always return a valid
	InternetAddressList, so you don't have to do a null check before a
	foreach.

	* mono/Makefile.am: Remove InternetAddress.custom from customs and
	add InternetAddressList.cs to sources.

2005-05-25  Joe Shaw  <joeshaw@novell.com>

	* gmime/internet-address.c: Add accessor functions
	internet_address_get_type(), internet_address_get_name(),